<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.pondar.pacmankotlin.MainActivity">


    <!-- Notice how the custom view is referenced here with
      a full package path-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/pointsView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/points"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/timeLeftView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/timeLeft" />
        <TextView
            android:id="@+id/gameStatusView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/playing" />




    </LinearLayout>
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
        android:id="@+id/pauseGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause_button" />

        <Button
        android:id="@+id/continueGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_game" />

        <Button
            android:id="@+id/level1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Level 1"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/level2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Level 2"
            android:textAllCaps="true"
            />


    </GridLayout>

    <org.pondar.pacmankotlin.GameView
        android:id="@+id/timerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"></org.pondar.pacmankotlin.GameView>


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        android:layout_bottommargin="50dps"

        <Button
            android:id="@+id/moveRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/move_right" />


        <Button
            android:id="@+id/moveLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="5"
            android:text="@string/move_left" />

        <Button
            android:id="@+id/moveUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="9"
            android:text="@string/move_up" />

        <Button
            android:id="@+id/moveDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="12"
            android:text="@string/move_down" />
    </GridLayout>


</LinearLayout>
